if BUILDGUI

SUBDIRS = po directx libmisc matlib afsk fsk pammodem pskmodem newqpsk p3dmodem soundcard flexdrv configapp doc

else

SUBDIRS = po directx libmisc matlib afsk fsk pammodem pskmodem newqpsk p3dmodem soundcard flexdrv doc

endif

EXTRA_DIST = m4/ChangeLog  ABOUT-NLS cfgwindows cfgwindowsnodebug soundmodem.spec soundmodem.initscript

ACLOCAL_AMFLAGS = -I m4
